# rackspace-keystoneauth-plugin

./: requirements.txt  setup.cfg
rackspaceauth/: v1.py  v2.py
